# Dynamic_Motor_Driver

./: .gitignore  .travis.yml  CMakeLists.txt  DRV8835.cpp  DRV8835.h  README.md  keywords.txt  library.json  library.properties  platformio.ini
examples/DRV8835_Basic/: DRV8835_Basic.ino
examples/TB67H420FTG/: TB67H420FTG.ino
examples/TB67H420FTG_Basic/: TB67H420FTG_Basic.ino
src/: DRV8835.h  DRV8835Driver.cpp  DRV8835Driver.h  HBridgeDriver.cpp  HBridgeDriver.h  HBridgeMotor.cpp  HBridgeMotor.h  InInDriver.cpp  InInDriver.h  InInMotor.cpp  InInMotor.h  InInPWMDriver.cpp  InInPWMDriver.h  InInPWMMotor.cpp  InInPWMMotor.h  L298.h  Motor.h  MotorDriver.h  PhaseEnableDriver.cpp  PhaseEnableDriver.h  PhaseEnableMotor.cpp  PhaseEnableMotor.h  SN754410.h  TB6612FNG.h  TB67H420FTG.h  keywords.txt  main.cpp
